# substrate-playground

./: .gitignore  Cargo.toml  README.md
src/: calls.rs  lib.rs  main.rs  query.rs
src/calculate_sovereign_account/: mod.rs
src/encode_value_rococo/: mod.rs
src/fees_asset_asset_hub/: calls.rs  mod.rs
src/fees_asset_substrate/: calls.rs  mod.rs  utils.rs
src/metadata/: asset_hub_metadata.scale  local_metadata.scale  rococo_local_metadata.scale
zombienet/: testing-network.toml
