[package]
name = "subxt_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
subxt = "0.31.0"
subxt-signer = { version = "0.31.0", features = ["subxt", "sr25519"] }
clap = { version = "4.4.3", features = ["derive"] }
hex = "0.4"
sp-core = "21.0.0"
